# fivedice

./: .gitignore  Cargo.toml  Makefile  README.md  bootstrap.js  package-lock.json  package.json  shrink-wasm.sh  test.txt  webpack.config.js
docs/: 0.bootstrap.js  bootstrap.js
src/: dom.rs  draw.rs  ffi.rs  game.rs  lib.rs  main.rs
src/client/: index.html  index.js
src/wasm/: context.rs  dom.rs  draw.rs  error.rs  ffi.rs  game.rs  lib.rs
src/wasm/draw/: mod.rs  traits.rs  types.rs  window.rs
src/wasm/widget_grid/: Cargo.toml  README.md
src/wasm/widget_grid/src/: error.rs  ffi.rs  lib.rs  traits.rs  types.rs  widgets.rs  window.rs
