[package]
authors = ["deciduously <ben@deciduously.com>"]
description = "WASM Yahtzee"
edition = "2018"
license = "MIT"
name = "fivedice"
repository = "https://github.com/deciduously/fivedice.git"
version = "0.1.0"
[dependencies]
js-sys = "0.3"
lazy_static = "1.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = ["Attr", "CanvasRenderingContext2d", "console", "Document", "DomRect", "DomRectReadOnly", "Element", "Event", "EventTarget", "HtmlCanvasElement", "HtmlElement", "HtmlInputElement", "MouseEvent", "Node", "Text", "TextMetrics", "Window"]
version = "0.3"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[profile.release]
lto = true
# opt-level = 'z' # or s for less aggressive, but sometimes more effective, always measure