[package]
authors = ["deciduously <ben@deciduously.com>"]
description = "WASM Yahtzee"
edition = "2018"
license = "MIT"
name = "fivedice"
repository = "https://github.com/deciduously/fivedice.git"
version = "0.1.0"
[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.widget_grid]
path = "src/wasm/widget_grid"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[profile.release]
lto = true
# opt-level = 'z' # or s for less aggressive, but sometimes more effective, always measure