[package]
authors = ["deciduously <ben@deciduously.com>"]
description = "WASM Yahtzee"
edition = "2018"
license = "MIT"
name = "fivedice"
repository = "https://github.com/deciduously/fivedice.git"
version = "0.1.0"
[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = ["console"]
version = "0.3"

[dependencies.widget_grid]
path = "src/wasm/widget_grid"

[lib]
crate-type = ["cdylib"]
path = "src/wasm/lib.rs"

[profile.release]
lto = true