[package]
authors = ["deciduously <ben@deciduously.com>"]
description = "Canvas drawing library for WASM"
edition = "2018"
license = "MIT"
name = "widget_grid"
repository = "https://github.com/deciduously/widget-grid.git"
version = "0.1.0"
[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = ["Attr", "CanvasRenderingContext2d", "console", "Document", "DomRect", "DomRectReadOnly", "Element", "Event", "EventTarget", "HtmlCanvasElement", "HtmlElement", "HtmlInputElement", "MouseEvent", "Node", "Text", "TextMetrics", "Window"]
version = "0.3"

[profile]
[profile.release]
debug = true # TODO remove
lto = true
